# agentJie

./: .gitignore  README.md  pyproject.toml
examples/: demo.py
src/agentjie/: __main__.py  agent.py  coordinator.py  langgraph.py  llm_agent.py  project.py  runner.py  tasks.py  tools.py  utils.py
tests/: test_coordinator.py  test_tasks.py
